Fix broken logout

--- a/.env.sample
+++ b/.env.sample
@@ -3,8 +3,9 @@
 # |--------------------------------------------------------------------------
 
 ASPNETCORE_ENVIRONMENT=Development
-DB_CONNECTION_STRING=User ID=myuser;Password=mypassword;Initial Catalog=mydb;Data Source=localhost;SslMode=none
+DB_CONNECTION_STRING=User ID=root;Password=;Initial Catalog=mydb;Data Source=localhost;
 DB_TYPE=mysql
+REDIS_CONNECTION=localhost
 
 # |--------------------------------------------------------------------------
 # | Auth
@@ -12,6 +13,9 @@ DB_TYPE=mysql
 
 AUTH_HTTP_URL=http://localhost:2001
 AUTH_HTTPS_URL=https://localhost:2000
+AUTH_SESSION_COOKIE_NAME=oasid
+AUTH_CHECK_SESSION_COOKIE_NAME=oachksid
+AUTH_CSRF_COOKIE_NAME=oacsrf
 
 # |--------------------------------------------------------------------------
 # | Api
@@ -27,4 +31,9 @@ API_SECRET=secret
 
 APP_HTTP_URL=http://localhost:4001
 APP_HTTPS_URL=https://localhost:4000
-
+APP_COOKIE_KEY_PREFIX=APP_COOKIE_
+APP_AUTH_CLIENT_ID=interactive.confidential
+APP_AUTH_CLIENT_SECRET=secret
+APP_VUE_DEVELOPMENT_SERVER_URL=https://localhost:4002
+APP_SESSION_COOKIE_NAME=asid
+APP_CSRF_COOKIE_NAME=acsrf
