--- a/src/web/backend/auth/Auth.csproj
+++ b/src/web/backend/auth/Auth.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <NoDefaultLaunchSettingsFile>True</NoDefaultLaunchSettingsFile>
@@ -9,8 +9,8 @@
       <EmbeddedResource Remove="Controllers\**" />
       <None Remove="Controllers\**" />
     </ItemGroup>
-    
-    <ItemGroup>
+
+    <ItemGroup Condition="'$(Configuration)' == 'Debug'">
         <Content Include="../../../../.env">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </Content>
