Fix migration Id and separate oauth2 db connection

--- a/.env.sample
+++ b/.env.sample
@@ -16,6 +16,8 @@ AUTH_HTTPS_URL=https://localhost:2000
 AUTH_SESSION_COOKIE_NAME=oasid
 AUTH_CHECK_SESSION_COOKIE_NAME=oachksid
 AUTH_CSRF_COOKIE_NAME=oacsrf
+AUTH_DB_CONNECTION=User ID=root;Password=;Initial Catalog=mydb_oauth;Data Source=localhost;
+AUTH_DB_TYPE=mysql
 
 # |--------------------------------------------------------------------------
 # | Api
